# domain-chip-crypto-trading

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  spark-chip.json  spark-researcher.project.json
artifacts/runs/20260415-224550-366975-train-once/workspace/: CLAUDE.md  SPARK_RESEARCHER_PRESET.md  pyproject.toml
artifacts/runs/20260415-224550-366975-train-once/workspace/.spark-swarm/: collective-sync.json
artifacts/runs/20260415-224550-366975-train-once/workspace/autoloop/lanes/: paper-trade.md
artifacts/runs/20260415-224550-366975-train-once/workspace/data/: paper_trade_btc_up_down_1h_contracts.jsonl  paper_trade_eth_up_down_1h_contracts.jsonl  sol_up_down_1h_contracts.jsonl
artifacts/runs/20260415-224550-366975-train-once/workspace/docs/recursion/: autoloop-policy.json
artifacts/runs/20260415-224550-366975-train-once/workspace/live/: dashboard_app.py  run_paper_trade.py
artifacts/runs/20260415-224550-366975-train-once/workspace/scripts/: build_bridge_packets.py  build_doctrine_from_contradictions.py  build_mutation_trials.py  build_recursion_packets.py  build_research_scout_queue.py  build_signal_mutations.py  build_timeline_packs.py  crypto_autoloop.py  evaluate_self_edits.py  generate_crossover_candidates.py  generate_indicator_mutations.py  generate_targeted_mutations.py  prepare_btc_dataset.py  prepare_paper_trade_dataset.py  prepare_timeline_pack_dataset.py  refresh_market_data.py  researcher_run.py  run_backtest_loop.py  run_heavy_backtest_benchmark.py  run_paper_trade_cycle.py  sol_regime_monitor.py  variety_model.py
(+6790 files in other folders)
