[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-crypto-trading"
version = "0.1.0"
description = "Crypto trading domain chip with autoloop doctrine discovery, backtesting, and live paper trading."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
crypto-autoloop = "domain_chip_crypto_trading.autoloop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
